--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body *{
 
 body{
     margin: 0px;
+    
 }
 
 .grid{
@@ -17,6 +18,40 @@ body{
                          "l-s main r-s-b"
                          "footer footer footer";
 }
+
+/* media query 
+bisogna mettere prima sempre la definizione più alta */
+/* tablet */
+
+  @media screen and (max-width: 768px) {
+    .grid{
+        grid-template-rows: 100px 300px 50px 100px;
+        grid-template-columns: 200px 1fr 50%; 
+        grid-template-areas: "header header header" 
+                             "l-s main main"
+                             "r-s-t r-s-t r-s-b"
+                             "footer footer footer"
+                             
+    }
+  }
+/* telefono */
+
+@media screen and (max-width: 480px) {
+    .grid{
+        grid-template-rows: 100px 50px 400px 50px 50px 100px;
+        grid-template-columns: 1fr; 
+        grid-template-areas: "header" 
+                             "l-s"
+                             "main"
+                             "r-s-t"
+                             "r-s-b"
+                             "footer";     
+
+    }
+  }
+
+
+ /* ----------------------------------------------- */
 
 header{
     border-color: violet;
